[package]
name = "api-server"
version = "0.1.0"
edition = "2021"
description = "Code Review API Server - Analyzes git repositories with rule-based checks and AI feedback"
authors = ["Junho Yeo"]

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"
actix-web-lab = "0.22"  # SSE support

# Async runtime
tokio = { version = "1", features = ["full", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-stream = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for LLM providers
reqwest = { version = "0.12", features = ["json", "stream"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Secrets
secrecy = { version = "0.10", features = ["serde"] }

# Git operations
git2 = "0.19"
tempfile = "3"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for review IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Parallel processing
rayon = "1"

# Code analysis
oxc_allocator = "0.44"
oxc_parser = "0.44"
oxc_ast = "0.44"
oxc_span = "0.44"

# Regex for pattern matching
regex = "1"
async-trait = "0.1.89"

# Directory traversal
walkdir = "2"

# MongoDB
mongodb = "3.0"
bson = "2.9"

[dev-dependencies]
actix-test = "0.1"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
